--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=8080
 DEV_MODE=development
-MONGO_URL=mongodb://localhost:27017/bloodBank
+
+MONGO_URL=mongodb+srv://bloodbridge078:Sumit%408146@bloodbridge.v0pq3.mongodb.net/?retryWrites=true&w=majority&appName=BloodBridge
 JWT_SECRET=deepuq2u2
