--- a/vercel.json
+++ b/vercel.json
@@ -8,12 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1.js"
-    },
-    {
-      "src": "/(.*)", 
-      "dest": "/index.html" 
+      "src": "/api/v1/(.*)",
+      "dest": "/api/index.js"
     }
   ]
 }
